# resonance

./: .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: state.rs
backend/src/db/: mod.rs
backend/src/handlers/: jury.rs  mod.rs  observability.rs  pulses.rs
backend/tests/: crypto_spec.rs
frontend/: .env.example  Dockerfile  package.json
frontend/src/: app.css
frontend/src/lib/api/: goals.ts  pulses.ts
frontend/src/lib/components/: Composer.svelte
frontend/src/lib/crypto/: blind_vault.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/profile/: +page.svelte
resonance/: .env.example  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
resonance/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
resonance/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
resonance/.github/workflows/: ci.yml
resonance/backend/: .env.example  Cargo.toml  Dockerfile
resonance/backend/migrations/: 0002_goals_jury_sessions.sql  0003_dms_notif_blocks_hashtags.sql  0004_reposts_media_notifprefs.sql
resonance/backend/src/: lib.rs  main.rs  state.rs
resonance/backend/src/cron/: mod.rs
resonance/backend/src/crypto/: blind_vault.rs  mod.rs
resonance/backend/src/db/: models.rs  queries.rs
resonance/backend/src/errors/: mod.rs
resonance/backend/src/handlers/: blind_index.rs  connections.rs  discover.rs  dms.rs  goals.rs  interactions.rs  media.rs  mod.rs  moderation.rs  notifications.rs  personal_ws.rs  pulses.rs  reposts.rs  rtb.rs  search.rs  settings.rs  vault.rs
resonance/backend/src/middleware/: mod.rs  rate_limit.rs  signature.rs
resonance/backend/src/presence/: mod.rs
resonance/backend/tests/: api_smoke.rs  dm_canonical_ordering.rs  rate_limit_spec.rs
resonance/frontend/: .dockerignore  Dockerfile  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
resonance/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
resonance/scripts/: push-github.sh
(+38 files in other folders)
